# data_dealer

./: Cargo.toml  store-copy.json  store.json  styles.css
src/: main.rs  utils.rs
src/components/: add_button.rs  component.rs  list.rs  mod.rs  store.rs  window.rs
