[package]
name = "data_dealer"
version = "0.1.0"
authors = ["Vladislav <vladislav.betivu@ellation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.10.3"
gio = "0.9.1"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_16"]