[package]
name = "data_dealer"
version = "0.1.0"
authors = ["Vladislav <vladislav.betivu@ellation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glib = "0.14.0"
gio = "0.14.0"
gtk = "0.14.0"
gdk = "0.14.0"
serde_json = "1.0.64"
